styles.css
:root {
    --main-bg-color: #030301;
    --alt-bg-color: #0e1012;
    --light-bg-color: #e6e7eb;
    --main-text-color: #F6F8F8;
    --accent-1-color: #FB3640;
    --accent-2-color: #FFC15E;
    --accent-3-color: #5FAD56;
    --accent-4-color: #2CA58D;
    --accent-5-color: #3A506B;
    --accent-6-color: #331832;
    --main-font-family: "Tw Cen MT", "Trebuchet MS", Helvetica, sans-serif;
    --alt-font-family: Tahoma, Verdana, sans-serif;
    --title-font-family: "Cascadia Code", Courier New, Courier, monospace;
}

body {
    background-color: var(--main-text-color);
    color: var(--main-bg-color);
    font-family: var(--main-font-family);
}

.darkModeBody {
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
}

#header {
    display: flex;
    position: sticky;
    z-index: 10;
    top: 0;
    background-color: inherit;
}

.navigation {
    padding: 1em;
}

.center {
    margin: auto;
}

.navigationItem {
    border-style: none;
    margin: 0.2em;
    margin-left: 1em;
    margin-right: 1em;
    padding: 0.1em;
    text-decoration: none;
    line-height: 3em;
    color: var(--accent-4-color);
}

@media only screen and (min-width: 720px) and (orientation: landscape){
    .navigationItem {
        font-size: 2vw;
    }

    #nameTitle {
        font-size: 2.5vw;
    }
}

@media only screen and (min-width: 720px){
    #darkModeBtn {
        height: 2vw;
        width: 2vw;
    }

    #darkModeImg {
        height: 2vw;
        width: 2vw;
    }
}

@media only screen and (max-width: 719px) {
    .navigationItem {
        font-size: large;
    }
    #nameTitle {
        font-size: x-large;
    }
    #darkModeBtn {
        height: 2rem;
        width: 2rem;
    }
    #darkModeImg {
        height: 2rem;
        width: 2rem;
    }
}

.navigationItem:hover {
    color: var(--accent-5-color);
}

#nameTitle {
    color: var(--accent-1-color);
    font-family: var(--title-font-family);
}

#darkModeBtn {
    background-color: transparent;
    border: none;
    margin: 0.2em;
    padding: 0.1em;
}

#darkModeImg {
    cursor: pointer;
    filter: invert(57%) sepia(50%) saturate(525%) hue-rotate(118deg) brightness(86%) contrast(93%);
}

#darkModeImg:hover {
    filter: invert(27%) sepia(25%) saturate(823%) hue-rotate(173deg) brightness(43%) contrast(86%);
}

.collapsible {
    border: none;
    width: 3em;
    height: 3em;
    background-color: transparent;
    float: left;
    padding-top: 1em;
}

.collapsible:hover {
    filter: invert(100%) sepia(26%) saturate(5776%) hue-rotate(180deg) brightness(100%) contrast(106%);
}

.collapsibleImg {
    width: 10vw;
    height: 10vw;
    cursor: pointer;
}

.collapsibleTitle {
    color: var(--accent-2-color);
    cursor: pointer;
    padding-left: 1em;
    font-size: 7vw;
    position: relative;
    bottom: 15vw;
    left: 2vw;
}

.collapsibleContainer {
    display: flex;
}

.content {
    display: none;
    position: relative;
    top: 10vw;
}

.collapsed {
    display: block;
    font-size: 1.2rem;
    font-weight: 400;
    line-height: 1.5;
    color: inherit;
    font-family: var(--alt-font-family);
    padding: 0.375rem 0.75rem;
}

#form {
    display: block;
}

.formBody {
    margin: 0;
    font-family: var(--alt-font-family);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: inherit;
    text-align: left;
    background-color: var(--light-bg-color);
    padding: 30px;
    padding-bottom: 10px;
    border: none;
    max-width: 100%;
}

.formHeading {
    font-family: var(--main-font-family);
    font-size: 2rem;
}

.formBodyDark {
    background-color: var(--alt-bg-color);
}

.formGroup {
    margin-bottom: 1rem;
}

.formInputGroup {
    position: relative;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-align: stretch;
    align-items: stretch;
    width: 100%;
}

.formControl {
    display: block;
    width: 100%;
    height: calc(1.5em + 0.75rem + 2px);
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: inherit;
    background-color: var(--main-text-color);
    background-clip: padding-box;
    border: none;
    outline: none;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.formControlDark {
    background-color: var(--main-bg-color);
}

.formControl:focus {
    border: 1px solid #313131;
}

select.formControl[size], select.formControl[multiple] {
    height: auto;
}

textarea.formControl {
    font-family: var(--alt-font-family);
    height: auto;
}

label.formLabel {
    display: inline-block;
    margin-bottom: 0.5rem;
}

.formBtn {
    display: inline-block;
    font-weight: 400;
    color: #212529;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: transparent;
    border: none;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

@media (prefers-reduced-motion: reduce) {
    .formBtn {
        transition: none;
    }
}

.formBtn:hover {
    color: #212529;
    text-decoration: none;
}

.formBtn:focus, .formBtn.focus {
    outline: 0;
    box-shadow: 0 0 0 0.2rem #28374b;
}

.formBtnPrimary {
    color: var(--main-text-color);
    background-color: var(--accent-4-color);
}

.formBtnPrimary:hover {
    color: var(--main-text-color);
    background-color: var(--accent-5-color);
}

.formBtnPrimary:focus, .formBtnPrimary.focus {
    color: var(--main-text-color);
    background-color: var(--accent-5-color);
}

.formBtnLg, .formBtnLg > .formBtn {
    padding: 0.5rem 1rem;
    font-size: 1.25rem;
    line-height: 1.5;
    border-radius: 0.3rem;
}

.formBtnBlock {
    display: block;
    margin: auto;
    width: 80%;
}

.formBtnBlock + .formBtnBlock {
    margin-top: 0.5rem;
}

input[type="submit"].formBtnBlock, input[type="reset"].formBtnBlock, input[type="button"].formBtnBlock {
    width: 80%;
}

#about {
    display: block;
    font-size: 1.2em;
    font-weight: 400;
    line-height: 1.5;
    color: inherit;
    font-family: var(--alt-font-family);
    padding: 0.375rem 0.75rem;
    padding-left: 3vw;
    padding-right: 3vw;
}

#welcomeTitle {
    font-size: 7vw;
    font-family: var(--alt-font-family);
    text-align: center;
}

.bgTitle {
    color: var(--light-bg-color);
}

.bgTitleDark {
    color: var(--alt-bg-color);
}

#scratchTitle {
    font-size: 2vw;
    font-family: var(--alt-font-family);
    text-align: left;
    padding-left: 8vw;
    position: relative;
    bottom: 3em;
}

#codeLink {
    font-size: 2vw;
    font-family: var(--alt-font-family);
    text-align: left;
    padding-left: 8vw;
    position: relative;
    bottom: 10.5vw;
    left: 29em;
    color: var(--accent-4-color);
}

#codeLink:hover {
    color: var(--accent-5-color);
}

.hoverLink {
    color: var(--accent-4-color);
}

.hoverLink:hover {
    color: var(--accent-5-color);
}

.linkTitle {
    color: var(--accent-4-color);
    font-size: 3em;
    padding-left: 2rem;
}

#aboutMeTitle {
    font-size: 7vw;
}

#aboutMeTitle:hover {
    color: var(--accent-5-color);
}

